index.html + style.css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 <title>Web Dev Journey</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 		<body>
 			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
+			<h1>Fundamentals</h1>
+			<center>
+			<table>
+				<tr>
+					<th>HTML</th>
+				</tr>
+				<tr><td>Syntax</td></tr>
+				<tr><td>Basic Tags</td></tr>
+				<tr><td>Forms</td></tr>
+				<tr><td>SEO</td></tr>
+				<tr><td>Discoverable Content</td></tr>
+				<tr><td>Svg</td></tr>
+				<tr><td>Best Practices</td></tr>
+			</table>
+			<hr>
+			<table>
+				<tr>
+					<th>CSS</th>
+				</tr>
+				<tr>
+				<tr><td>Syntax</td></tr>
+				<tr><td>Selectors</td></tr>
+				<tr><td>Specificity</td></tr>
+				<tr><td>Pseudo Selectors</td></tr>
+				<tr><td>Box Model</td></tr>
+				<tr><td>Margin Collapsing</td></tr>
+				<tr><td>Colors</td></tr>
+				<tr><td>Calc</td></tr>
+				<tr><td>Layout</td></tr>
+				<tr><td>Flex</td></tr>
+				<tr><td>Grid</td></tr>
+				<tr><td>Transforms</td></tr>
+				<tr><td>Animations</td></tr>
+				<tr><td>Responsive Design</td></tr>
+				<tr><td>Media Queries</td></tr>
+				<tr><td>Relative Units</td></tr>
+				<tr><td>Images</td></tr>
+				<tr><td>CSS Variables</td></tr>
+				<tr><td>Best Practices</td></tr>
+				</tr>
+			</table>
+			<hr>
+			<table>
+				<tr>
+					<th>JavaScript</th>
+				</tr>
+				<tr>
+				<tr><td>Syntax</td></tr>
+				<tr><td>Spread</td></tr>
+				<tr><td>Destructuring</td></tr>
+				</tr>
+			</table>
+		</center>
 		</body>
 </html>
