index.html + style.css

--- a/index.html
+++ b/index.html
@@ -9,57 +9,63 @@
 		<body>
 			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
 			<h1>Fundamentals</h1>
-			<center>
 			<table>
+				<img height="25px" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
 				<tr>
-					<th>HTML</th>
+					<td>Syntax</td>
+					<td>Basic Tags</td>
+					<td>Forms</td>
 				</tr>
-				<tr><td>Syntax</td></tr>
-				<tr><td>Basic Tags</td></tr>
-				<tr><td>Forms</td></tr>
-				<tr><td>SEO</td></tr>
-				<tr><td>Discoverable Content</td></tr>
-				<tr><td>Svg</td></tr>
+				<tr>
+					<td>SEO</td>
+					<td>Discoverable Content</td>
+					<td>Svg</td>
+				</tr>
 				<tr><td>Best Practices</td></tr>
 			</table>
-			<hr>
+			<br>
 			<table>
+				<img height="25px" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
 				<tr>
-					<th>CSS</th>
+					<td>Syntax</td>
+					<td>Selectors</td>
+					<td>Specificity</td>
 				</tr>
 				<tr>
-				<tr><td>Syntax</td></tr>
-				<tr><td>Selectors</td></tr>
-				<tr><td>Specificity</td></tr>
-				<tr><td>Pseudo Selectors</td></tr>
-				<tr><td>Box Model</td></tr>
-				<tr><td>Margin Collapsing</td></tr>
-				<tr><td>Colors</td></tr>
-				<tr><td>Calc</td></tr>
-				<tr><td>Layout</td></tr>
-				<tr><td>Flex</td></tr>
-				<tr><td>Grid</td></tr>
-				<tr><td>Transforms</td></tr>
-				<tr><td>Animations</td></tr>
-				<tr><td>Responsive Design</td></tr>
-				<tr><td>Media Queries</td></tr>
-				<tr><td>Relative Units</td></tr>
-				<tr><td>Images</td></tr>
-				<tr><td>CSS Variables</td></tr>
-				<tr><td>Best Practices</td></tr>
+					<td>Pseudo Selectors</td>
+					<td>Box Model</td>
+					<td>Margin Collapsing</td>
+				</tr>
+				<tr>
+					<td>Colors</td>
+					<td>Calc</td>
+					<td>Layout</td>
+				</tr>
+				<tr>
+					<td>Flex</td>
+					<td>Grid</td>
+					<td>Transforms</td>
+				</tr>
+				<tr>
+					<td>Animations</td>
+					<td>Responsive Design</td>
+					<td>Media Queries</td>
+				</tr>
+				<tr>
+					<td>Relative Units</td>
+					<td>Images</td>
+					<td>CSS Variables</td>
+				<tr><td>Best Practices</td>
 				</tr>
 			</table>
-			<hr>
+			<br>
 			<table>
+				<img height="25px" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
 				<tr>
-					<th>JavaScript</th>
-				</tr>
-				<tr>
-				<tr><td>Syntax</td></tr>
-				<tr><td>Spread</td></tr>
-				<tr><td>Destructuring</td></tr>
+					<td>Syntax</td>
+					<td>Spread</td>
+					<td>Destructuring</td>
 				</tr>
 			</table>
-		</center>
 		</body>
 </html>
