--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 					<td>Spread</td>
 					<td>Destructuring</td>
 				</tr>
+				<tr>
+					<td>DOM</td>
+					<td>DOM Manipulation</td>
+					<td>Events</td>
+				</tr>
 			</table>
 		</body>
 </html>
