index.html + style.css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
 <title>Web Dev Journey</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="https://i.imgur.com/iDl1ZQJ.png">
 	</head>
 		<body>
+			<h2>My Web Development Journey</h2>
 			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
 			<h1>Fundamentals</h1>
 			<table>
-				<img height="25px" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
+				<img height="35px" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
 				<tr>
 					<td>Syntax</td>
 					<td>Basic Tags</td>
@@ -25,7 +27,7 @@
 			</table>
 			<br>
 			<table>
-				<img height="25px" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
+				<img height="35px" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
 				<tr>
 					<td>Syntax</td>
 					<td>Selectors</td>
@@ -60,7 +62,7 @@
 			</table>
 			<br>
 			<table>
-				<img height="25px" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
+				<img height="35px" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
 				<tr>
 					<td>Syntax</td>
 					<td>Spread</td>
@@ -72,5 +74,5 @@
 					<td>Events</td>
 				</tr>
 			</table>
-		</body>
+			</body>
 </html>
