--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 					<td>DOM Manipulation</td>
 					<td>Events</td>
 				</tr>
+				<tr>
+					<td>Objects</td>
+					<td>Prototype</td>
+					<td>Classes</td>
+				</tr>
 			</table>
 			</body>
 </html>
