--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
 					<td>Prototype</td>
 					<td>Classes</td>
 				</tr>
+				<tr>
+					<td>Regex</td>
+					<td>Template Literals</td>
+					<td>Promises</td>
+				</tr>
+				<tr>
+					<td>Callbacks</td>
+					<td>Async/Await</td>
+					<td></td>
+				</tr>
 			</table>
 			</body>
 </html>
