--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
 				<tr>
 					<td>Callbacks</td>
 					<td>Async/Await</td>
+					<td>Fetch</td>
+				</tr>
+				<tr>
+					<td>Web Animations</td>
+					<td>Modules</td>
 					<td></td>
 				</tr>
 			</table>
