index.html + style.css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <link rel="icon" href="https://i.imgur.com/iDl1ZQJ.png">
 	</head>
 		<body>
-			<h2>My Web Development Journey</h2>
-			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
+			<h2>my web development journey.</h2>
+			<div class="topnav">
+  			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
+  			<a href="https://github.com/gplucas" target="_blank">My profile</a>
+			</div>
 			<h1>Fundamentals</h1>
 			<table>
 				<img height="35px" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
@@ -94,5 +97,9 @@
 					<td></td>
 				</tr>
 			</table>
+			<br>
+				<footer>
+					<p>@gplucas</p>
+				</footer>
 			</body>
 </html>
