--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 				<tr>
 					<td>Web Animations</td>
 					<td>Modules</td>
+					<td>Intl</td>
+				</tr>
+				<tr>
+					<td>Canvas</td>
+					<td></td>
 					<td></td>
 				</tr>
 			</table>
