index.html + style.css + Debug

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
 <title>Web Dev Journey</title>
@@ -14,8 +14,8 @@
   			<a href="https://github.com/gplucas" target="_blank">My profile</a>
 			</div>
 			<h1>Fundamentals</h1>
+				<img alt="" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
 			<table>
-				<img height="35px" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
 				<tr>
 					<td>Syntax</td>
 					<td>Basic Tags</td>
@@ -27,10 +27,9 @@
 					<td>Svg</td>
 				</tr>
 				<tr><td>Best Practices</td></tr>
-			</table>
-			<br>
+			</table><br>
+				<img alt="" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
 			<table>
-				<img height="35px" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
 				<tr>
 					<td>Syntax</td>
 					<td>Selectors</td>
@@ -64,8 +63,8 @@
 				</tr>
 			</table>
 			<br>
+				<img alt="" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
 			<table>
-				<img height="35px" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
 				<tr>
 					<td>Syntax</td>
 					<td>Spread</td>
@@ -98,8 +97,8 @@
 				</tr>
 				<tr>
 					<td>Canvas</td>
-					<td></td>
-					<td></td>
+					<td>Documentation</td>
+					<td>Best Practices</td>
 				</tr>
 			</table>
 			<br>
