--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				</tr>
 				<tr><td>Best Practices</td></tr>
 			</table><br>
-				<img alt="" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
+			<img alt="" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
 			<table>
 				<tr>
 					<td>Syntax</td>
@@ -61,9 +61,8 @@
 					<td>CSS Variables</td>
 				<tr><td>Best Practices</td>
 				</tr>
-			</table>
-			<br>
-				<img alt="" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
+			</table><br>
+			<img alt="" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
 			<table>
 				<tr>
 					<td>Syntax</td>
@@ -101,9 +100,5 @@
 					<td>Best Practices</td>
 				</tr>
 			</table>
-			<br>
-				<footer>
-					<p>@gplucas</p>
-				</footer>
 			</body>
 </html>
