index.html + style.css + Debug

--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
 			<div class="topnav">
   			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
   			<a href="https://github.com/gplucas" target="_blank">My profile</a>
-			</div>
+				<div class="dropdown">
+    			<button class="dropbtn">Dropdown 
+      			<i class="fa fa-caret-down"></i>
+    			</button>
+    			<div class="dropdown-content">
+      				<ul>
+						<li><strong>Fundamentals</strong></li>
+						<li>Accessibility</li>
+						<li>Web Components</li>
+						<li>Progressive WebApps</li>
+						<li>Build Tools</li>
+						<li>Frameworks & Libraries</li>
+						<li>Testing</li>
+						<li>Architecture & Paradigms</li>
+						<li>Team collaboration</li>
+						<li>Design & UX</li>
+						<li>The modern Web</li>
+						<li>Algorithms & Data Structures</li>
+						<li>Databases & Servers</li>
+					</ul>
+    			</div></div></div>
 			<h1>Fundamentals</h1>
 				<img alt="" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
 			<table>
@@ -98,6 +118,14 @@
 					<td>Canvas</td>
 					<td>Documentation</td>
 					<td>Best Practices</td>
+				</tr>
+			</table><br>
+			<p class="centre"><strong>The Browser</strong></p>
+			<table>
+				<tr>
+					<td>Standardization</td>
+					<td>W3C</td>
+					<td>TC39</td>
 				</tr>
 			</table>
 			</body>
