--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
   			<a href="https://github.com/gplucas" target="_blank">My profile</a>
 				<div class="dropdown">
-    			<button class="dropbtn">Dropdown 
+    			<button class="dropbtn">Guideline
       			<i class="fa fa-caret-down"></i>
     			</button>
     			<div class="dropdown-content">
