index.html + style.css + images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</ul>
     			</div></div></div>
 			<h1>Fundamentals</h1>
-				<img alt="" class="center" src="https://camo.githubusercontent.com/da7acacadecf91d6dc02efcd2be086bb6d78ddff19a1b7a0ab2755a6fda8b1e9/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f68746d6c352f68746d6c352d6f726967696e616c2e737667"/><br>
+				<img alt="" class="center" src="images/html-icon.png"/><br>
 			<table>
 				<tr>
 					<td>Syntax</td>
@@ -48,7 +48,7 @@
 				</tr>
 				<tr><td>Best Practices</td></tr>
 			</table><br>
-			<img alt="" class="center" src="https://camo.githubusercontent.com/2e496d4bfc6f753ddca87b521ce95c88219f77800212ffa6d4401ad368c82170/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f637373332f637373332d6f726967696e616c2e737667"/><br>
+			<img alt="" class="center" src="images/css-icon.png"/><br>
 			<table>
 				<tr>
 					<td>Syntax</td>
@@ -82,7 +82,7 @@
 				<tr><td>Best Practices</td>
 				</tr>
 			</table><br>
-			<img alt="" class="center" src="https://camo.githubusercontent.com/442c452cb73752bb1914ce03fce2017056d651a2099696b8594ddf5ccc74825e/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"/><br>
+			<img alt="" class="center" src="images/javascript-icon.png"/><br>
 			<table>
 				<tr>
 					<td>Syntax</td>
@@ -127,6 +127,11 @@
 					<td>W3C</td>
 					<td>TC39</td>
 				</tr>
-			</table>
+			</table><br>
+			<!-- CSS Validator badge -->
+			<p>
+    			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+        		<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
+			</p>
 			</body>
 </html>
