index.html + style.css + image

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 					<td>W3C</td>
 					<td>TC39</td>
 				</tr>
-			</table><br>
+			</table><br><br>
 			<!-- CSS Validator badge -->
-			<p>
-    			<a href="http://jigsaw.w3.org/css-validator/check/referer">
-        		<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
-			</p>
+				<p>
+    				<!-- <a href="http://jigsaw.w3.org/css-validator/check/referer"> -->
+        			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
+				</p>
 			</body>
 </html>
