index.html + style.css

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
 					<td>W3C</td>
 					<td>TC39</td>
 				</tr>
+				<tr>
+					<td>WHATWG</td>
+					<td>Specifications</td>
+					<td>Browser Engines</td>
+				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
 				<p>
