--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="icon" href="https://i.imgur.com/iDl1ZQJ.png">
 	</head>
 		<body>
+			<div class="color-change">
 			<h2>my web development journey.</h2>
 			<div class="topnav">
   			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
@@ -139,9 +140,12 @@
 				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
+			<div class="footer">
 				<p>
     				<!-- <a href="http://jigsaw.w3.org/css-validator/check/referer"> -->
         			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
 				</p>
+			</div>
+			</div>
 			</body>
 </html>
