index.html + style.css + Debug

--- a/index.html
+++ b/index.html
@@ -138,12 +138,17 @@
 					<td>Blink</td>
 					<td>Gecko</td>
 				</tr>
+				<tr>
+					<td>HTTP</td>
+					<td>The Internet</td>
+					<td>Polyfills</td>
+				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
 			<div class="footer">
 				<p>
     				<!-- <a href="http://jigsaw.w3.org/css-validator/check/referer"> -->
-        			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
+        			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /><!-- </a> -->
 				</p>
 			</div>
 			</div>
