index.html + style.css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     			</button>
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Fundamentals</strong></li>
-						<li>Accessibility</li>
+						<li>Fundamentals</li>
+						<li><strong>Accessibility</strong></li>
 						<li>Web Components</li>
 						<li>Progressive WebApps</li>
 						<li>Build Tools</li>
@@ -121,7 +121,7 @@
 					<td>Best Practices</td>
 				</tr>
 			</table><br>
-			<p class="centre"><strong>The Browser</strong></p>
+			<h3>The Browser</h3>
 			<table>
 				<tr>
 					<td>Standardization</td>
@@ -142,6 +142,10 @@
 					<td>HTTP</td>
 					<td>The Internet</td>
 					<td>Polyfills</td>
+				</tr>
+				<tr>
+					<td>Debugging</td>
+					<td>Developer Console</td>
 				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
