index.html + style.css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     			<button class="dropbtn">Guideline
       			<i class="fa fa-caret-down"></i>
     			</button>
+    			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li>Fundamentals</li>
 						<li><strong>Accessibility</strong></li>
 						<li>Web Components</li>
 						<li>Progressive WebApps</li>
@@ -33,7 +33,35 @@
 						<li>Algorithms & Data Structures</li>
 						<li>Databases & Servers</li>
 					</ul>
-    			</div></div></div>
+    			</div></div></div><br>
+    			<!-- New Table - The Road -->
+    			<table class="table-the-road">
+    				<tr>
+    					<td>Fundamentals <span class="completed">Completed</span></td>
+    					<td>Accessibility</td>
+    					<td>Web Components</td>
+    				</tr>
+    				<tr>
+    					<td>Progressive WebApps</td>
+    					<td>Build Tools</td>
+    					<td>Frameworks & Libraries</td>
+    				</tr>
+    				<tr>
+    					<td>Testing</td>
+    					<td>Architecture & Paradigms</td>
+    					<td>Team collaboration</td>
+    				</tr>
+    				<tr>
+    					<td>Design & UX</td>
+    					<td>The modern Web</td>
+    					<td>Algorithms & Data Structures</td>
+    				</tr>
+    				<tr>
+    					<td>Databases & Servers</td>
+    					<td></td>
+    					<td></td>
+    				</tr>
+    			</table><br>
 			<h1>Fundamentals</h1>
 				<img alt="" class="center" src="images/html-icon.png"/><br>
 			<table>
