--- a/index.html
+++ b/index.html
@@ -175,7 +175,15 @@
 					<td>Debugging</td>
 					<td>Developer Console</td>
 				</tr>
-			</table><br><br>
+			</table><br>
+			<h1>Accessibility</h1>
+			<table>
+				<tr>
+					<td>The why</td>
+					<td>Screen Readers</td>
+					<td>Accessibility tree</td>
+				</tr>
+			</table><br>
 			<!-- CSS Validator badge -->
 			<div class="footer">
 				<p>
