index.html + style.css

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<td>Screen Readers</td>
 					<td>Accessibility tree</td>
 				</tr>
-			</table><br>
+			</table><br><br>
 			<!-- CSS Validator badge -->
 			<div class="footer">
 				<p>
