--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@
 					<td>Screen Readers</td>
 					<td>Accessibility tree</td>
 				</tr>
+				<tr>
+					<td>ARIA</td>
+					<td>Accessible HTML</td>
+					<td>Alt Text</td>
+				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
 			<div class="footer">
