--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
 					<td>Accessible HTML</td>
 					<td>Alt Text</td>
 				</tr>
+				<tr>
+					<td>Accessible CSS</td>
+					<td>Accessible Forms</td>
+					<td>UI States</td>
+				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
 			<div class="footer">
