--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
 					<td>Accessible Forms</td>
 					<td>UI States</td>
 				</tr>
+				<tr>
+					<td>Keyboard Accessibility</td>
+					<td>Focus</td>
+					<td>Accessible Colors</td>
+				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
 			<div class="footer">
