--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Accessibility</strong></li>
-						<li>Web Components</li>
+						<li><strong>Web Components</strong></li>
 						<li>Progressive WebApps</li>
 						<li>Build Tools</li>
 						<li>Frameworks & Libraries</li>
@@ -38,7 +37,7 @@
     			<table class="table-the-road">
     				<tr>
     					<td>Fundamentals <span class="completed">Completed</span></td>
-    					<td>Accessibility</td>
+    					<td>Accessibility <span class="completed">Completed</span></td>
     					<td>Web Components</td>
     				</tr>
     				<tr>
@@ -197,6 +196,11 @@
 					<td>Keyboard Accessibility</td>
 					<td>Focus</td>
 					<td>Accessible Colors</td>
+				</tr>
+				<tr>
+					<td>Law & Policies</td>
+					<td>Audits</td>
+					<td></td>
 				</tr>
 			</table><br><br>
 			<!-- CSS Validator badge -->
