index.html + style.css

--- a/index.html
+++ b/index.html
@@ -205,10 +205,11 @@
 			</table><br><br>
 			<!-- CSS Validator badge -->
 			<div class="footer">
-				<p>
-    				<!-- <a href="http://jigsaw.w3.org/css-validator/check/referer"> -->
-        			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /><!-- </a> -->
+				<p class="footer-left">
+    				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+        			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
 				</p>
+					<p class="footer-right">Web Development<br>Study-project<br>Study-notes</p>
 			</div>
 			</div>
 			</body>
