index.html + style.css

--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
 					<td></td>
 				</tr>
 			</table><br><br>
+			<!-- Footer -->
 			<!-- CSS Validator badge -->
+			<footer>
 			<div class="footer">
 				<p class="footer-left">
     				<a href="http://jigsaw.w3.org/css-validator/check/referer">
@@ -211,6 +213,7 @@
 				</p>
 					<p class="footer-right">Web Development<br>Study-project<br>Study-notes</p>
 			</div>
+			</footer>
 			</div>
 			</body>
 </html>
