index.html + style.css + Image

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 		<body>
 			<div class="color-change">
 			<h2>my web development journey.</h2>
+				<!-- Font Source Sans Pro from Google -->
+				<link rel="preconnect" href="https://fonts.googleapis.com">
+				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+				<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 			<div class="topnav">
   			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
   			<a href="https://github.com/gplucas" target="_blank">My profile</a>
+  			<a href="">Bookmarks</a>
 				<div class="dropdown">
     			<button class="dropbtn">Guideline
       			<i class="fa fa-caret-down"></i>
