--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
 				<p class="footer-left">
     				<a href="http://jigsaw.w3.org/css-validator/check/referer">
         			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
+					<p class="paragraph-footer-left">@gplucas</p>
 				</p>
 					<p class="footer-right">Web Development<br>Study-project<br>Study-notes</p>
 			</div>
