--- a/index.html
+++ b/index.html
@@ -207,6 +207,14 @@
 					<td>Audits</td>
 					<td></td>
 				</tr>
+			</table><br>
+			<h1>Web Components</h1>
+			<table>
+				<tr>
+					<td>Custom Elements</td>
+					<td>HTML Templates</td>
+					<td>Shadow DOM</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
