--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
 					<td>HTML Templates</td>
 					<td>Shadow DOM</td>
 				</tr>
+				<tr>
+					<td>Shadow Parts</td>
+					<td>Slots</td>
+					<td>Best Practices</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
