--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Web Components</strong></li>
-						<li>Progressive WebApps</li>
+						<li><strong>Progressive WebApps</strong></li>
 						<li>Build Tools</li>
 						<li>Frameworks & Libraries</li>
 						<li>Testing</li>
@@ -43,7 +42,7 @@
     				<tr>
     					<td>Fundamentals <span class="completed">Completed</span></td>
     					<td>Accessibility <span class="completed">Completed</span></td>
-    					<td>Web Components</td>
+    					<td>Web Components <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
     					<td>Progressive WebApps</td>
