--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
 					<td>Slots</td>
 					<td>Best Practices</td>
 				</tr>
+			</table><br>
+			<h1>Progressive WebApps</h1>
+			<h3>API's</h3>
+			<table>
+				<tr>
+					<td>Storage</td>
+					<td>Routing</td>
+					<td>History API</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
