--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
 					<td>Routing</td>
 					<td>History API</td>
 				</tr>
+				<tr>
+					<td>Service Workers</td>
+					<td>Offline first</td>
+					<td>Push notifications</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
