--- a/index.html
+++ b/index.html
@@ -233,6 +233,19 @@
 					<td>Offline first</td>
 					<td>Push notifications</td>
 				</tr>
+				<tr>
+					<td>Web App Manifest</td>
+					<td>Add to homescreen</td>
+					<td>Pointer Events</td>
+				</tr>
+			</table>
+			<h3>Loading Performance</h3>
+			<table>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
