--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
 			<h3>Loading Performance</h3>
 			<table>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>App Shell</td>
+					<td>Render-Blocking Resources</td>
+					<td>Compression</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
