index.html + style.css + Image

--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@
 					<td>Render-Blocking Resources</td>
 					<td>Compression</td>
 				</tr>
+				<tr>
+					<td>Performance metrics</td>
+					<td>Largest Contentful Paint</td>
+					<td>Total Blocking Time</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
