--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@
 					<td>Largest Contentful Paint</td>
 					<td>Total Blocking Time</td>
 				</tr>
+				<tr>
+					<td>Time to Interactive</td>
+					<td>Lazy Loading</td>
+					<td>Dynamic Import</td>
+				</tr>
+				<tr>
+					<td>Offscreen images</td>
+					<td>Critical Request Chains</td>
+					<td>Tree shaking</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
