--- a/index.html
+++ b/index.html
@@ -261,6 +261,22 @@
 					<td>Critical Request Chains</td>
 					<td>Tree shaking</td>
 				</tr>
+				<tr>
+					<td>Codesplitting</td>
+					<td>PRPL Pattern</td>
+					<td>Resource Prioritization</td>
+				</tr>
+				<tr>
+					<td>Caching</td>
+				</tr>
+			</table>
+			<h3>Rendering Performance</h3>
+			<table>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
