index.html + bookmarks.html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 				<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 			<div class="topnav">
+			<a href="https://gplucas.github.io/webdev-journey/">Home</a>
   			<a href="https://andreasbm.github.io/web-skills/" target="_blank">Reference</a>
   			<a href="https://github.com/gplucas" target="_blank">My profile</a>
-  			<a href="">Bookmarks</a>
+  			<a href="bookmarks.html">Bookmarks</a>
 				<div class="dropdown">
     			<button class="dropbtn">Guideline
       			<i class="fa fa-caret-down"></i>
