--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
 			<h3>Rendering Performance</h3>
 			<table>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>Rendering</td>
+					<td>Event loop</td>
+					<td>Microtask</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
