index.html + bookmarks.html

--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
 					<td>Event loop</td>
 					<td>Microtask</td>
 				</tr>
+				<tr>
+					<td>Stack</td>
+					<td>Heap</td>
+					<td>RAIL Model</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
@@ -286,7 +291,7 @@
 				<p class="footer-left">
     				<a href="http://jigsaw.w3.org/css-validator/check/referer">
         			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
-					<p class="paragraph-footer-left">@gplucas</p>
+					<p class="paragraph-footer-left"><a href="https://github.com/gplucas">@gplucas</p></a>
 				</p>
 					<p class="footer-right">Web Development<br>Study-project<br>Study-notes</p>
 			</div>
