--- a/index.html
+++ b/index.html
@@ -283,6 +283,11 @@
 					<td>Heap</td>
 					<td>RAIL Model</td>
 				</tr>
+				<tr>
+					<td>requestAnimationFrame</td>
+					<td>requestIdleCallback</td>
+					<td>Critical Rendering Path</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
