--- a/index.html
+++ b/index.html
@@ -288,6 +288,11 @@
 					<td>requestIdleCallback</td>
 					<td>Critical Rendering Path</td>
 				</tr>
+				<tr>
+					<td>The Pixel Pipeline</td>
+					<td>Style calculations</td>
+					<td>Transforms</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
