--- a/index.html
+++ b/index.html
@@ -293,6 +293,11 @@
 					<td>Style calculations</td>
 					<td>Transforms</td>
 				</tr>
+				<tr>
+					<td>Paint areas</td>
+					<td>Layout Trashing</td>
+					<td>Layers</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
