--- a/index.html
+++ b/index.html
@@ -298,6 +298,19 @@
 					<td>Layout Trashing</td>
 					<td>Layers</td>
 				</tr>
+				<tr>
+					<td>Debounce</td>
+					<td>CSS Containment</td>
+					<td>Web Workers</td>
+				</tr>
+			</table>
+			<h3>Security</h3>
+			<table>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
