--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
 			<h3>Security</h3>
 			<table>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>HTTPS</td>
+					<td>Browser Sandbox</td>
+					<td>OWASP</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
