--- a/index.html
+++ b/index.html
@@ -311,6 +311,19 @@
 					<td>Browser Sandbox</td>
 					<td>OWASP</td>
 				</tr>
+				<tr>
+					<td>Cross-Site Scripting</td>
+					<td>Clickjacking</td>
+					<td>Content Security Policy</td>
+				</tr>
+			</table>
+			<h3>Audits</h3>
+			<table>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
