--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Progressive WebApps</strong></li>
-						<li>Build Tools</li>
+						<li><strong>Build Tools</strong></li>
 						<li>Frameworks & Libraries</li>
 						<li>Testing</li>
 						<li>Architecture & Paradigms</li>
@@ -46,7 +45,7 @@
     					<td>Web Components <span class="completed">Completed</span></td>
     				</tr>
     				<tr>
-    					<td>Progressive WebApps</td>
+    					<td>Progressive WebApps <span class="completed">Completed</span></td>
     					<td>Build Tools</td>
     					<td>Frameworks & Libraries</td>
     				</tr>
@@ -320,9 +319,9 @@
 			<h3>Audits</h3>
 			<table>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>Performance budgets</td>
+					<td>Lighthouse</td>
+					<td>Chrome DevTools</td>
 				</tr>
 			</table><br><br>
 			<!-- Footer -->
@@ -332,8 +331,7 @@
 				<p class="footer-left">
     				<a href="http://jigsaw.w3.org/css-validator/check/referer">
         			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS válido!" /></a>
-					<p class="paragraph-footer-left"><a href="https://github.com/gplucas">@gplucas</p></a>
-				</p>
+					<p class="paragraph-footer-left"><a href="https://github.com/gplucas">@gplucas</a></p>
 					<p class="footer-right">Web Development<br>Study-project<br>Study-notes</p>
 			</div>
 			</footer>
