bookmarks.html + readme.md

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -26,8 +26,7 @@
     			<!-- Dropdown Table -->
     			<div class="dropdown-content">
       				<ul>
-						<li><strong>Progressive WebApps</strong></li>
-						<li>Build Tools</li>
+						<li><strong>Build Tools</strong></li>
 						<li>Frameworks & Libraries</li>
 						<li>Testing</li>
 						<li>Architecture & Paradigms</li>
@@ -39,10 +38,11 @@
 					</ul>
     			</div></div></div>
     			<!-- Main content -->
+    			<p>HTML Reference</p>
     			<ul>
-    				<li>Link 1</li>
-    				<li>Link 2</li>
-    				<li>Link 3</li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element" target="_blank">HTML elements reference</a></li>
+    				<li><a href="https://developer.mozilla.org/en-US/docs/MDN/Guidelines/Code_guidelines/HTML" target="_blank">HTML guidelines</a></li>
+    				<li><a href="https://www.w3schools.com/html/html5_syntax.asp" target="_blank">HTML Style Guide</a></li>
     			</ul>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
