--- a/index.html
+++ b/index.html
@@ -323,6 +323,14 @@
 					<td>Lighthouse</td>
 					<td>Chrome DevTools</td>
 				</tr>
+			</table><br>
+			<h1>Build Tools</h1>
+			<table>
+				<tr>
+					<td>Package Managers</td>
+					<td>NPM</td>
+					<td>Yarn</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
