--- a/index.html
+++ b/index.html
@@ -331,6 +331,16 @@
 					<td>NPM</td>
 					<td>Yarn</td>
 				</tr>
+				<tr>
+					<td>Module Bundlers</td>
+					<td>Rollup</td>
+					<td>Webpack</td>
+				</tr>
+				<tr>
+					<td>Parcel</td>
+					<td>Snowpack</td>
+					<td>Linters and formatters</td>
+				</tr>
 			</table><br><br>
 			<!-- Footer -->
 			<!-- CSS Validator badge -->
